# my-pythia

./: .env.example  .gitignore  .pre-commit-config.yaml  config.ini  docker-compose.yml  pyproject.toml
app/: docker-compose.yml
dockerfiles/: mypythia.Dockerfile
messenger/: Dockerfile
mypythia/extractor/: main.py  tinkoff.py  tools.py
mypythia/processors/: pulsar_processor.py  template.py
mypythia/scheduler/: main.py  tools.py
